crates/nx-syntax/tests/fixtures/valid/simple_element.nx
// Simple element with properties
let <Button text: string /> = <button>{text}</button>
