crates/nx-syntax/tests/fixtures/invalid/invalid-element.nx
// Invalid element syntax - missing closing bracket
let <Button text:string  = <button>{text}</button>
